--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Rejagone Barbershop</title>
+    <meta name="keywords" content="Rejagone, REJAGONE, rejagone, rEjAgOnE, Rejagone Barbershop, ReJaGoNe bArBeRsHoP">
+  
     <style>
         :root {
             --bg: #fafafa;
@@ -557,3 +559,4 @@
 </body>
 
 </html>
+
